--- a/sipNLearn/package.json
+++ b/sipNLearn/package.json
@@ -20,7 +20,8 @@
     "mysql2": "^1.7.0",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.2"
+    "sequelize": "^5.21.2",
+    "y": "^0.3.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
